--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "shapely>=2.1.1",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["psp*"]
