--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,5 @@ dependencies = [
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["psp.relay"]
+[tool.setuptools]
+packages = ["psp", "psp.relay"]
