--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["psp", "psp.relay"]
+namespace-packages = ["psp"]
+packages = ["psp.relay"]
