--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-namespace-packages = ["psp"]
-packages = ["psp.relay"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["psp"]
+namespaces = true
