--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "psp-relay"
 version = "0.1.0"
-description = "Add your description here"
+description = "Library with functions related to specfic relay types."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
