--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Library with functions related to specfic relay types."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "psp-plotting",
     "shapely>=2.1.1",
 ]
 
@@ -14,5 +15,9 @@ build-backend = "setuptools.build_meta"
 
 [dependency-groups]
 dev = [
+    "pytest>=8.4.2",
     "ruff>=0.14.2",
 ]
+
+[tool.uv.sources]
+psp-plotting = { git = "https://github.com/U-RxI/psp-plotting" }
